# CSLPproject

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  loadfile  loadfile.cpp
.cmake/api/v1/reply/: cache-v2-92639add3f8a457556d8.json  cmakeFiles-v1-c89fb185e385b7541bdf.json  codemodel-v2-67a94966c5f8614dc98e.json  index-2025-02-23T00-35-02-0203.json  target-loadfile-60de01ac7c4c79aab67e.json  toolchains-v1-56acd811f64fa750e0de.json
Deliverable1/: .gitignore  loadfile
Deliverable2/: Bitstream.cpp  Bitstream.h  README.md  bitgenerator.py  bits.txt  decoder  decoder.cpp  encoder  encoder.cpp
Deliverable3/: Golomb.cpp  Golomb.h  golombcoding  input.txt
Deliverable4/: CMakeLists.txt  Golomb.cpp  Golomb.h  README.md  interframeVideoCoding  interframeVideoCoding.cpp  predictiveImageCoding  predictiveImageCoding.cpp  predictiveVideoCoding  predictiveVideoCoding.cpp
Delivery1/: CMakeLists.txt  README.md
