cmake_minimum_required(VERSION 2.8)
project( predictiveCoding )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable( predictiveImageCoding predictiveImageCoding.cpp ../Deliverable2/Bitstream.cpp Golomb.cpp)
add_executable( predictiveVideoCoding predictiveVideoCoding.cpp ../Deliverable2/Bitstream.cpp Golomb.cpp)
add_executable( interframeVideoCoding interframeVideoCoding.cpp ../Deliverable2/Bitstream.cpp Golomb.cpp)
target_link_libraries( predictiveImageCoding ${OpenCV_LIBS})
target_link_libraries( predictiveVideoCoding ${OpenCV_LIBS})
target_link_libraries( interframeVideoCoding ${OpenCV_LIBS})